<resources>
    <string name="app_name">Calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button8">8</string>
    <string name="button7">7</string>
    <string name="button9">9</string>
    <string name="five">5</string>
    <string name="button6">6</string>
    <string name="button0">0</string>
    <string name="potitiveNegative">+/-</string>
    <string name="decimalString">.</string>
    <string name="equalString">=</string>
    <string name="plusString">+</string>
    <string name="minusString">-</string>
    <string name="backspaceString"><![CDATA[<-]]></string>
    <string name="divideString">/</string>
    <string name="multiplyString">*</string>
    <string name="clearString">C</string>

</resources>